# Diplom

./: CMakeLists.txt  main.cpp  probability.cpp  probability.h
